Registration css and php

--- a/css/Welcome_Page.css
+++ b/css/Welcome_Page.css
@@ -1,7 +1,7 @@
 body 
 {
     font-family: Verdana, sans-serif;
-    background-image: linear-gradient( snow,aqua ,skyblue , pink ,hotpink , coral , teal ,green, yellow, orange,violet,pink);
+    background-image: linear-gradient( snow,pink);
  
 }
 
