--- a/css/Welcome_Page.css
+++ b/css/Welcome_Page.css
@@ -74,7 +74,7 @@ img
     border-radius: 10px;
     width: 1520px;  
     height: 50px;
-    position:relative;/*bt-apply width height top left position*/
+    position:static;/*bt-apply width height top left position*/
     left: -10px;/*starts after 1000pixel */
     top: -10px;
 }
@@ -99,7 +99,7 @@ img
     background-color:indigo;
     width: 1520px;  
     height: 120px;
-    position:relative;/*bt-apply width height top left position*/
+    position:static;/*bt-apply width height top left position*/
     left: -10px;/*sratrs after 1000pixel */
     top: 10px;
     bottom:0px;
