--- a/css/Branches.css
+++ b/css/Branches.css
@@ -1,3 +1,4 @@
+
 body 
 {
     font-family: Verdana, sans-serif;
@@ -6,7 +7,7 @@ body
 }
 .Middle_Of_Page
 {
-    background-color: snow;  
+    background-color:red;  
     width: 800px; 
     height: 550px;
     border-radius: 20px;
