--- a/css/ContactUs.css
+++ b/css/ContactUs.css
@@ -6,7 +6,7 @@ body
 }
 .Middle_Of_Page
 {
-    background-color: snow;  
+    background-color: hotpink;  
     width: 800px; 
     height: 600px;
     border-radius: 20px;
@@ -16,6 +16,10 @@ body
     position: relative;
     left: 0%;
     top: 0%;
+}
+#GambIcons
+{
+    
 }
 h1
 {
@@ -32,7 +36,7 @@ p
 .topnav/*setting of navbar place */
 {
     overflow: hidden;
-    background-color :indigo;
+    background-color:indigo;
     border-radius: 10px;
     width: 1520px;  
     height: 50px;
