--- a/css/AboutUs.css
+++ b/css/AboutUs.css
@@ -6,7 +6,7 @@ body
 }
 .Schedules
 {
-    background-color: pink;  
+    background-color: hotpink;  
     width: 1200px; 
     height: 650px;
     border-radius: 20px;
