--- a/css/ContactUs.css
+++ b/css/ContactUs.css
@@ -6,9 +6,9 @@ body
 }
 .Middle_Of_Page
 {
-    background-color: snow;  
+    background-color: hotpink;  
     width: 800px; 
-    height: 600px;
+    height: 500px;
     border-radius: 20px;
     margin: center;   
     margin-left: auto;
@@ -17,6 +17,38 @@ body
     left: 0%;
     top: 0%;
 }
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 1px 2px;
+ 
+    position: relative;
+    bottom: -470px;
+    border: 3px solid  white;
+
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  
+  .fa-google {
+    background: #dd4b39;
+    color: white;
+  }
 h1
 {
    font-size:30px; 
